--- a/index.html
+++ b/index.html
@@ -59,7 +59,20 @@
       <div class="gallery_box">
         
         <ul>
-          <li><img src="img/IMG_2691.jpg"></li>
+          <!-- 網路端 -->
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248750/IMG_2691_eaekis.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248761/IMG_2692_vo4q0h.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248777/IMG_2693_olu1ni.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248759/IMG_2694_sspxuq.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248768/IMG_2695_qdixks.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248774/IMG_2696_wb6fao.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248774/IMG_2697_kdm9kd.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248776/IMG_2698_fyhsxk.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248762/IMG_2699_hzi0iq.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248780/IMG_2700_dbofte.jpg"></li>
+
+          <!-- 本地端 -->
+          <!-- <li><img src="img/IMG_2691.jpg"></li>
           <li><img src="img/IMG_2692.jpg"></li>
           <li><img src="img/IMG_2693.jpg"></li>
           <li><img src="img/IMG_2694.jpg"></li>
@@ -68,7 +81,7 @@
           <li><img src="img/IMG_2697.jpg"></li>
           <li><img src="img/IMG_2698.jpg"></li>
           <li><img src="img/IMG_2699.jpg"></li>
-          <li><img src="img/IMG_2700.jpg"></li>
+          <li><img src="img/IMG_2700.jpg"></li> -->
 
         </ul>
         
