public dir added

--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
     <!-- <link rel="stylesheet" href="stylesheets/core.css" media="screen"> -->
     <!-- <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"> -->
     
-    <link rel="icon" href="img/ray.ico"/>
+    <link rel="icon" href="public/img/ray.ico"/>
 
-    <link rel="stylesheet" href="css/kit/bootstrap.min.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="public/css/kit/bootstrap.min.css">
+    <link rel="stylesheet" href="public/stylesheets/github-light.css">
+    <link rel="stylesheet" href="public/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="css/kit/tooltip.css"> -->
-    <link rel="stylesheet" href="css/kit/animate.css">
-    <link rel="stylesheet" href="css/unslider.css">
-    <link rel="stylesheet" href="css/unslider-dots.css">
-    <link rel="stylesheet" href="css/star_bg.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="public/css/kit/animate.css">
+    <link rel="stylesheet" href="public/css/unslider.css">
+    <link rel="stylesheet" href="public/css/unslider-dots.css">
+    <link rel="stylesheet" href="public/css/star_bg.css">
+    <link rel="stylesheet" href="public/css/main.css">
 
     
 
-    <script type="text/javascript" src="js/modernizr.js"></script>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/kit/bootstrap.min.js"></script>
+    <script type="text/javascript" src="public/js/modernizr.js"></script>
+    <script type="text/javascript" src="public/js/jquery.min.js"></script>
+    <script type="text/javascript" src="public/js/kit/bootstrap.min.js"></script>
     <!-- <script type="text/javascript" src="js/kit/tooltip.js"></script> -->
-    <script type="text/javascript" src="js/unslider-min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="public/js/unslider-min.js"></script>
+    <script type="text/javascript" src="public/js/main.js"></script>
 
 
 
