--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="public/js/jquery.min.js"></script>
     <script type="text/javascript" src="public/js/kit/bootstrap.min.js"></script>
     <!-- <script type="text/javascript" src="js/kit/tooltip.js"></script> -->
+    <script type="text/javascript" src="public/kit/jquery.preload.js"></script>
     <script type="text/javascript" src="public/js/unslider-min.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
     
@@ -74,20 +75,6 @@
           <li><div class="pic_4"></li>
           <li><div class="pic_5"></li>
           <li><div class="pic_6"></li>
-
-
-          <!-- 本地端 -->
-          <!-- <li><img src="img/IMG_2691.jpg"></li>
-          <li><img src="img/IMG_2692.jpg"></li>
-          <li><img src="img/IMG_2693.jpg"></li>
-          <li><img src="img/IMG_2694.jpg"></li>
-          <li><img src="img/IMG_2695.jpg"></li>
-          <li><img src="img/IMG_2696.jpg"></li>
-          <li><img src="img/IMG_2697.jpg"></li>
-          <li><img src="img/IMG_2698.jpg"></li>
-          <li><img src="img/IMG_2699.jpg"></li>
-          <li><img src="img/IMG_2700.jpg"></li> -->
-
         </ul>
         
 
